force-app/main/default/objects/Talc__c/fields/Have_a_smartphone__c.field-meta.xml
<CustomField>
    <fullName>Have_a_smartphone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have a smartphone?</label>
    <type>Checkbox</type>
</CustomField>