force-app/main/default/objects/Talc__c/fields/Hospital_Primary_peritoneal_cancer__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Primary_peritoneal_cancer__c</fullName>
    <description>What is the name of the hospital/facility where [say you/other name here] were diagnosed with primary peritoneal cancer?</description>
    <inlineHelpText>What is the name of the hospital/facility where [say you/other name here] were diagnosed with primary peritoneal cancer?</inlineHelpText>
    <label>Hospital - Primary peritoneal cancer</label>
    <length>12768</length>
    <type>LongTextArea</type>
</CustomField>