force-app/main/default/objects/Talc__c/fields/Hospital_where_diagnosed_Breast_cancer__c.field-meta.xml
<CustomField>
    <fullName>Hospital_where_diagnosed_Breast_cancer__c</fullName>
    <description>What is the name of the hospital/facility where [say you/other name here] were diagnosed with breast cancer?</description>
    <inlineHelpText>What is the name of the hospital/facility where [say you/other name here] were diagnosed with breast cancer?</inlineHelpText>
    <label>Hospital where diagnosed - Breast cancer</label>
    <length>12768</length>
    <type>LongTextArea</type>
</CustomField>