force-app/main/default/objects/Talc__c/fields/Hospital_where_diagnosed_Cervical_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Hospital_where_diagnosed_Cervical_Cancer__c</fullName>
    <description>What is the name of the hospital/facility where [say you/other name here] were diagnosed with cervical cancer?</description>
    <inlineHelpText>What is the name of the hospital/facility where [say you/other name here] were diagnosed with cervical cancer?</inlineHelpText>
    <label>Hospital where diagnosed Cervical Cancer</label>
    <length>12768</length>
    <type>LongTextArea</type>
</CustomField>