force-app/main/default/objects/Talc__c/fields/Hospital_where_diagnosed_Endometrial_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_where_diagnosed_Endometrial_c__c</fullName>
    <description>What is the name of the hospital/facility where [say you/other name here] were diagnosed with endometrial cancer?</description>
    <inlineHelpText>What is the name of the hospital/facility where [say you/other name here] were diagnosed with endometrial cancer?</inlineHelpText>
    <label>Hospital where diagnosed Endometrial c.</label>
    <length>12768</length>
    <type>LongTextArea</type>
</CustomField>