force-app/main/default/objects/Talc__c/fields/Hospital_where_diagnosed_Endometriosis__c.field-meta.xml
<CustomField>
    <fullName>Hospital_where_diagnosed_Endometriosis__c</fullName>
    <description>What is the name of the hospital/facility where [say you/other name here] were diagnosed with endometriosis?</description>
    <inlineHelpText>What is the name of the hospital/facility where [say you/other name here] were diagnosed with endometriosis?</inlineHelpText>
    <label>Hospital where diagnosed Endometriosis</label>
    <length>12768</length>
    <type>LongTextArea</type>
</CustomField>