force-app/main/default/objects/Talc__c/fields/Hospital_where_diagnosed_Fallopian__c.field-meta.xml
<CustomField>
    <fullName>Hospital_where_diagnosed_Fallopian__c</fullName>
    <description>What is the name of the hospital/facility where [say you/other name here] were diagnosed with fallopian tube cancer?</description>
    <inlineHelpText>What is the name of the hospital/facility where [say you/other name here] were diagnosed with fallopian tube cancer?</inlineHelpText>
    <label>Hospital where diagnosed Fallopian</label>
    <length>12768</length>
    <type>LongTextArea</type>
</CustomField>