force-app/main/default/objects/Talc__c/fields/Hospital_where_diagnosed_Mesothelioma__c.field-meta.xml
<CustomField>
    <fullName>Hospital_where_diagnosed_Mesothelioma__c</fullName>
    <description>What is the name of the hospital/facility where [say you/other name here] were diagnosed with mesothelioma?</description>
    <inlineHelpText>What is the name of the hospital/facility where [say you/other name here] were diagnosed with mesothelioma?</inlineHelpText>
    <label>Hospital where diagnosed Mesothelioma</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>