force-app/main/default/objects/Talc__c/fields/Hospital_where_diagnosed_Uterine_cancer__c.field-meta.xml
<CustomField>
    <fullName>Hospital_where_diagnosed_Uterine_cancer__c</fullName>
    <description>What is the name of the hospital/facility where [say you/other name here] were diagnosed with uterine cancer?</description>
    <inlineHelpText>What is the name of the hospital/facility where [say you/other name here] were diagnosed with uterine cancer?</inlineHelpText>
    <label>Hospital where diagnosed Uterine cancer</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>