force-app/main/default/objects/Talc__c/fields/How_often_product_applied__c.field-meta.xml
<CustomField>
    <fullName>How_often_product_applied__c</fullName>
    <label>How often product applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>