force-app/main/default/objects/Talc__c/fields/Hysterectomy_Address__c.field-meta.xml
<CustomField>
    <fullName>Hysterectomy_Address__c</fullName>
    <label>Hysterectomy (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>