force-app/main/default/objects/Talc__c/fields/Injured_Person_or_a_Representative__c.field-meta.xml
<CustomField>
    <fullName>Injured_Person_or_a_Representative__c</fullName>
    <description>Are you the Injured Person or a Representative?</description>
    <inlineHelpText>Are you the Injured Person or a Representative?</inlineHelpText>
    <label>Injured Person or a Representative?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Injured Person</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>