force-app/main/default/objects/Talc__c/fields/Injureds_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Injureds_Date_of_Birth__c</fullName>
    <label>Injured&apos;s Date of Birth?</label>
    <type>Date</type>
</CustomField>