force-app/main/default/objects/Talc__c/fields/Injureds_date_of_death__c.field-meta.xml
<CustomField>
    <fullName>Injureds_date_of_death__c</fullName>
    <label>Injured&apos;s date of death?</label>
    <type>Date</type>
</CustomField>