force-app/main/default/objects/Talc__c/fields/Injureds_Full_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Injureds_Full_Legal_Name__c</fullName>
    <label>Injured&apos;s Full Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>