force-app/main/default/objects/Talc__c/fields/Injureds_Gender__c.field-meta.xml
<CustomField>
    <fullName>Injureds_Gender__c</fullName>
    <description>What is your Gender?*</description>
    <inlineHelpText>What is your Gender?*</inlineHelpText>
    <label>Injured&apos;s Gender?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Man</fullName>
            </value>
            <value>
                <fullName>Woman</fullName>
            </value>
            <value>
                <fullName>Non-Binary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>