force-app/main/default/objects/Talc__c/fields/Injureds_Legal_Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Injureds_Legal_Name_Suffix__c</fullName>
    <label>Injured&apos;s Legal Name-Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>