force-app/main/default/objects/Talc__c/fields/Injury_diagnosed_with__c.field-meta.xml
<CustomField>
    <fullName>Injury_diagnosed_with__c</fullName>
    <description>First, I want to make sure that you have an injury that we believe is caused by exposure to talcum powder so that we can help you. What injury were you diagnosed with? *</description>
    <inlineHelpText>First, I want to make sure that you have an injury that we believe is caused by exposure to talcum powder so that we can help you. What injury were you diagnosed with? *</inlineHelpText>
    <label>Injury diagnosed with?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Breast Cancer (DNQ)</fullName>
            </value>
            <value>
                <fullName>Uterine Cancer</fullName>
            </value>
            <value>
                <fullName>Ovarian Cancer</fullName>
            </value>
            <value>
                <fullName>Vaginal Cancer</fullName>
            </value>
            <value>
                <fullName>Lung Cancer (DNQ)</fullName>
            </value>
            <value>
                <fullName>Endometrial Cancer</fullName>
            </value>
            <value>
                <fullName>Fallopian Tube Cancer</fullName>
            </value>
            <value>
                <fullName>Mesothelioma</fullName>
            </value>
            <value>
                <fullName>Uterine Fibroid (DNQ)</fullName>
            </value>
            <value>
                <fullName>Cervical Cancer</fullName>
            </value>
            <value>
                <fullName>Vulvar Cancer</fullName>
            </value>
            <value>
                <fullName>Hysterectomy (DNQ)</fullName>
            </value>
            <value>
                <fullName>Primary Peritoneal Cancer</fullName>
            </value>
            <value>
                <fullName>Carcinosarcoma</fullName>
            </value>
            <value>
                <fullName>Endometriosis (DNQ)</fullName>
            </value>
            <value>
                <fullName>Omentum Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>