force-app/main/default/objects/Talc__c/fields/Is_Injured_deceased__c.field-meta.xml
<CustomField>
    <fullName>Is_Injured_deceased__c</fullName>
    <label>Is Injured/Client deceased?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>