force-app/main/default/objects/Talc__c/fields/Is_the_Caller_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Caller_Qualified__c</fullName>
    <label>Is the Caller Qualified?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>