force-app/main/default/objects/Talc__c/fields/Last_Name_of_the_legal_authority__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_of_the_legal_authority__c</fullName>
    <label>Last Name of the legal authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>