force-app/main/default/objects/Talc__c/fields/Last_time_product_applied__c.field-meta.xml
<CustomField>
    <fullName>Last_time_product_applied__c</fullName>
    <description>When was the Last time that you applied Johnson’s® Baby Powder or Shower to Shower® to the genital area?</description>
    <inlineHelpText>When was the Last time that you applied Johnson’s® Baby Powder or Shower to Shower® to the genital area?</inlineHelpText>
    <label>Last time product applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>