force-app/main/default/objects/Talc__c/fields/Last_Use_Date_Pharmacy_2__c.field-meta.xml
<CustomField>
    <fullName>Last_Use_Date_Pharmacy_2__c</fullName>
    <label>Last Use Date - Pharmacy 2</label>
    <type>Date</type>
</CustomField>