force-app/main/default/objects/Talc__c/fields/Last_Visit_Year_PC_Prov_2__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Year_PC_Prov_2__c</fullName>
    <label>Last Visit Year - PC Prov 2</label>
    <type>Date</type>
</CustomField>