force-app/main/default/objects/Talc__c/fields/Last_Visit_Year_Prov_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Year_Prov_3__c</fullName>
    <label>Last Visit Year - Prov 3</label>
    <type>Date</type>
</CustomField>