force-app/main/default/objects/Talc__c/fields/Lawyer_Name_and_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Name_and_Contact_Information__c</fullName>
    <label>Lawyer Name and Contact Information</label>
    <length>12768</length>
    <type>LongTextArea</type>
</CustomField>