force-app/main/default/objects/Talc__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>WattsGuerraTalcQuestionnaireV2FINAL_Data</relationshipName>
    <type>Lookup</type>
</CustomField>