force-app/main/default/objects/Talc__c/fields/Legal_authority_to_represent_Injured__c.field-meta.xml
<CustomField>
    <fullName>Legal_authority_to_represent_Injured__c</fullName>
    <description>Do you have legal authority to represent [say injured person’s name] claim?*</description>
    <inlineHelpText>Do you have legal authority to represent Injured claim?*</inlineHelpText>
    <label>Legal authority to represent Injured?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>