force-app/main/default/objects/Talc__c/fields/Lung_cancer_Address__c.field-meta.xml
<CustomField>
    <fullName>Lung_cancer_Address__c</fullName>
    <label>Lung cancer (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>