force-app/main/default/objects/Talc__c/fields/Maiden_Other_Names_Used__c.field-meta.xml
<CustomField>
    <fullName>Maiden_Other_Names_Used__c</fullName>
    <label>Maiden/Other Names Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>