force-app/main/default/objects/Talc__c/fields/Mesothelioma_Address__c.field-meta.xml
<CustomField>
    <fullName>Mesothelioma_Address__c</fullName>
    <label>Mesothelioma (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>