force-app/main/default/objects/Talc__c/fields/Monthyear_started_using_product__c.field-meta.xml
<CustomField>
    <fullName>Monthyear_started_using_product__c</fullName>
    <description>Approximately what month and year did you START using the product regularly?</description>
    <inlineHelpText>Approximately what month and year did you START using the product regularly?</inlineHelpText>
    <label>Month\year started using product?</label>
    <type>Date</type>
</CustomField>