force-app/main/default/objects/Talc__c/fields/New_or_Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing_Client__c</fullName>
    <description>Are you calling about an injury you have suffered or that someone else has suffered from using talcum powder?</description>
    <inlineHelpText>Are you calling about an injury you have suffered or that someone else has suffered from using talcum powder?</inlineHelpText>
    <label>New or Existing Client?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>