force-app/main/default/objects/Talc__c/fields/Next_Of_Kin__c.field-meta.xml
<CustomField>
    <fullName>Next_Of_Kin__c</fullName>
    <label>Next Of Kin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>