force-app/main/default/objects/Talc__c/fields/Number_of_Pharmacies_Used__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pharmacies_Used__c</fullName>
    <label>Number of Pharmacies Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>