force-app/main/default/objects/Talc__c/fields/Number_of_Pre_cancer_Providers_Visited__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pre_cancer_Providers_Visited__c</fullName>
    <label>Number of Pre-cancer Providers Visited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>