force-app/main/default/objects/Talc__c/fields/Number_of_Relatives_BRCA__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Relatives_BRCA__c</fullName>
    <label>Number of Relatives - BRCA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>more than 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>