force-app/main/default/objects/Talc__c/fields/Number_of_Relatives_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Relatives_Cancer__c</fullName>
    <label>Number of Relatives - Cancer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>more than 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>