force-app/main/default/objects/Talc__c/fields/Number_of_Unidentified_Cancer_Providers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unidentified_Cancer_Providers__c</fullName>
    <label>Number of Unidentified Cancer Providers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>