force-app/main/default/objects/Talc__c/fields/OC_Provider_2_Specialty__c.field-meta.xml
<CustomField>
    <fullName>OC_Provider_2_Specialty__c</fullName>
    <label>OC Provider 2 Specialty</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>