force-app/main/default/objects/Talc__c/fields/Omentum_cancer_Address__c.field-meta.xml
<CustomField>
    <fullName>Omentum_cancer_Address__c</fullName>
    <label>Omentum cancer (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>