force-app/main/default/objects/Talc__c/fields/Other_Cancer_Provider_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Cancer_Provider_1_Name__c</fullName>
    <label>Other Cancer Provider 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>