force-app/main/default/objects/Talc__c/fields/Other_Cancer_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Cancer_Type__c</fullName>
    <label>Other Cancer Type</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>