force-app/main/default/objects/Talc__c/fields/Ovarian_cancer_Address__c.field-meta.xml
<CustomField>
    <fullName>Ovarian_cancer_Address__c</fullName>
    <label>Ovarian cancer (Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>