force-app/main/default/objects/Talc__c/fields/Ovaries_Removed_During_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Ovaries_Removed_During_Surgery__c</fullName>
    <label>Ovaries Removed During Surgery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>