force-app/main/default/objects/Talc__c/fields/Ovaries_Removed_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Ovaries_Removed_Surgery__c</fullName>
    <description>Were your ovaries removed in that surgery?</description>
    <inlineHelpText>Were your ovaries removed in that surgery?</inlineHelpText>
    <label>Ovaries Removed Surgery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>