force-app/main/default/objects/Talc__c/fields/Past_Smoked_Cigarettes__c.field-meta.xml
<CustomField>
    <fullName>Past_Smoked_Cigarettes__c</fullName>
    <label>Past Smoked Cigarettes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>