force-app/main/default/objects/Talc__c/fields/Person_who_would_have_legal_authority__c.field-meta.xml
<CustomField>
    <fullName>Person_who_would_have_legal_authority__c</fullName>
    <label>Person who would have legal authority?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>