force-app/main/default/objects/Talc__c/fields/Pharmacy_Address_Rx_3__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Address_Rx_3__c</fullName>
    <label>Pharmacy Address - Rx 3</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>