force-app/main/default/objects/Talc__c/fields/Pharmacy_Name_Rx_1__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Name_Rx_1__c</fullName>
    <label>Pharmacy Name - Rx 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>